--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
   "name": "korase",
   "private": true,
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "render": "webpack && node dist/render.cjs",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.26.3",
+    "html-react-parser": "^5.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "shahneshan": "^1.0.0-beta.2"
+    "shahneshan": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "file-loader": "^6.2.0",
     "globals": "^15.11.0",
-    "vite": "^5.4.10"
+    "raw-loader": "^4.0.2",
+    "style-loader": "^4.0.0",
+    "vite": "^5.4.10",
+    "webp-loader": "^0.6.0"
   }
 }
