--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "korase",
   "private": true,
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,7 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "shahneshan": "^1.0.0-beta.3"
+    "shahneshan": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "babel-loader": "^9.2.1",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
@@ -34,6 +35,8 @@
     "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
     "vite": "^5.4.10",
+    "mini-css-extract-plugin": "^2.9.2",
     "webp-loader": "^0.6.0"
+    
   }
 }
