--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "html-react-parser": "^5.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.0",
-    "shahneshan": "^1.0.0"
+    "shahneshan": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -32,11 +33,10 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "file-loader": "^6.2.0",
     "globals": "^15.11.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
     "vite": "^5.4.10",
-    "mini-css-extract-plugin": "^2.9.2",
     "webp-loader": "^0.6.0"
-    
   }
 }
