--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "korase",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
+  "main": "./dist/render.cjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,7 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.0",
-    "shahneshan": "^1.0.3"
+    "shahneshan": "^1.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
